--- a/MvcTicariOtomasyon/MvcTicariOtomasyon/Views/Satis/Index.cshtml
+++ b/MvcTicariOtomasyon/MvcTicariOtomasyon/Views/Satis/Index.cshtml
@@ -39,7 +39,7 @@
 <a href="/Satis/SatisEkle" class="btn btn-info">Yeni Satış Yap</a>
 
 
-<link href="~/Content/bootstrap.css" rel="stylesheet" />
+@*<link href="~/Content/bootstrap.css" rel="stylesheet" />*@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
 <link href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css" rel="stylesheet" />
