--- a/MvcTicariOtomasyon/MvcTicariOtomasyon/Views/Shared/AdminLayout.cshtml
+++ b/MvcTicariOtomasyon/MvcTicariOtomasyon/Views/Shared/AdminLayout.cshtml
@@ -73,31 +73,39 @@
                         </a>
 
                         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
-                            <div class="sb-nav-link-icon"><i class="fas fa-lock"></i></div>
-                            Admin
+                            <div class="sb-nav-link-icon"><i class="fas fa-chart-pie"></i></div>
+                            Grafikler
                             <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                         </a>
                         <div class="collapse" id="collapsePages" aria-labelledby="headingTwo" data-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav accordion" id="sidenavAccordionPages">
                                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#pagesCollapseAuth" aria-expanded="false" aria-controls="pagesCollapseAuth">
-                                    Yetkilendirme
+                                    Grafik Türleri
                                     <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                                 </a>
                                 <div class="collapse" id="pagesCollapseAuth" aria-labelledby="headingOne" data-parent="#sidenavAccordionPages">
-                                    <nav class="sb-sidenav-menu-nested nav"><a class="nav-link" href="login.html">Giriş Yap</a><a class="nav-link" href="register.html">Kayıt Ol</a><a class="nav-link" href="password.html">Şifremi Unuttum</a></nav>
+                                    <nav class="sb-sidenav-menu-nested nav">
+                                        <a class="nav-link" href="/Grafik/Index5/">Pie Grafik</a>
+                                        <a class="nav-link" href="/Grafik/Index6/">Line Grafik</a>
+                                        <a class="nav-link" href="/Grafik/Index7/">Column Grafik</a>
+                                    </nav>
                                 </div>
                                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#pagesCollapseError" aria-expanded="false" aria-controls="pagesCollapseError">
                                     Hata Sayfaları
                                     <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                                 </a>
                                 <div class="collapse" id="pagesCollapseError" aria-labelledby="headingOne" data-parent="#sidenavAccordionPages">
-                                    <nav class="sb-sidenav-menu-nested nav"><a class="nav-link" href="401.html">401 Page</a><a class="nav-link" href="404.html">404 Page</a><a class="nav-link" href="500.html">500 Page</a></nav>
+                                    <nav class="sb-sidenav-menu-nested nav">
+                                        <a class="nav-link" href="401.html">401 Page</a>
+                                        <a class="nav-link" href="404.html">404 Page</a>
+                                        <a class="nav-link" href="500.html">500 Page</a>
+                                    </nav>
                                 </div>
                             </nav>
                         </div>
                         <div class="sb-sidenav-menu-heading">Rapor & Fatura</div>
                         <a class="nav-link" href="/Satis/Index/">
-                            <div class="sb-nav-link-icon"><i class="fas fa-tag"></i></div>
+                            <div class="sb-nav-link-icon"><i class="fas fa-chart-bar"></i></div>
                             Satışlar
                         </a>
                         <a class="nav-link" href="/Fatura/Index/">
@@ -105,12 +113,20 @@
                             Faturalar
                         </a>
                         <a class="nav-link" href="index.html">
-                            <div class="sb-nav-link-icon"><i class="fas fa-search"></i></div>
+                            <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                             Giderler
+                        </a>
+                        <a class="nav-link" href="/Kargo/Index/">
+                            <div class="sb-nav-link-icon"><i class="fas fa-gift"></i></div>
+                            Kargolar
                         </a>
                         <a class="nav-link" href="/Urun/UrunListesi">
                             <div class="sb-nav-link-icon"><i class="fas fa-print"></i></div>
                             Pdf ~ Excel
+                        </a>
+                        <a class="nav-link" href="/Alertler/Index/">
+                            <div class="sb-nav-link-icon"><i class="fas fa-box"></i></div>
+                            Alertler
                         </a>
                         <a class="nav-link" href="/istatistik/Index">
                             <div class="sb-nav-link-icon"><i class="fas fa-database"></i></div>
