--- a/MvcTicariOtomasyon/MvcTicariOtomasyon/Views/Urun/Index.cshtml
+++ b/MvcTicariOtomasyon/MvcTicariOtomasyon/Views/Urun/Index.cshtml
@@ -24,6 +24,7 @@
         <th>Kategori Adı</th>
         <th>Sil</th>
         <th>Güncelle</th>
+        <th>Satış Yap</th>
     </tr>
 
     @foreach (var u in Model)
@@ -37,6 +38,7 @@
         <td>@u.Kategori.KategoriAd</td>
         <td><a href="/Urun/UrunSil/@u.Urunid" class="btn btn-danger">Sil</a></td>
         <td><a href="/Urun/UrunGetir/@u.Urunid" class="btn btn-success">Güncelle</a></td>
+        <td><a href="/Urun/SatisYap/@u.Urunid" class="btn btn-primary">Satış Yap</a></td>
     </tr> 
         }
 </table>
