--- a/MvcTicariOtomasyon/MvcTicariOtomasyon/Views/Shared/AdminLayout.cshtml
+++ b/MvcTicariOtomasyon/MvcTicariOtomasyon/Views/Shared/AdminLayout.cshtml
@@ -63,13 +63,18 @@
                         </a>
 
                         <a class="nav-link" href="/Cari/Index/">
-                            <div class="sb-nav-link-icon"><i class="fas fa-user"></i></div>
+                            <div class="sb-nav-link-icon"><i class="fas fa-street-view"></i></div>
                             Cariler
                         </a>
 
                         <a class="nav-link" href="/Personel/Index/">
-                            <div class="sb-nav-link-icon"><i class="fas fa-street-view"></i></div>
+                            <div class="sb-nav-link-icon"><i class="fas fa-user-alt"></i></div>
                             Personeller
+                        </a>
+
+                        <a class="nav-link" href="/Personel/PersonelListe/">
+                            <div class="sb-nav-link-icon"><i class="fas fa-id-card"></i></div>
+                            Personel Kartı
                         </a>
 
                         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
@@ -88,17 +93,6 @@
                                         <a class="nav-link" href="/Grafik/Index5/">Pie Grafik</a>
                                         <a class="nav-link" href="/Grafik/Index6/">Line Grafik</a>
                                         <a class="nav-link" href="/Grafik/Index7/">Column Grafik</a>
-                                    </nav>
-                                </div>
-                                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#pagesCollapseError" aria-expanded="false" aria-controls="pagesCollapseError">
-                                    Hata Sayfaları
-                                    <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                                </a>
-                                <div class="collapse" id="pagesCollapseError" aria-labelledby="headingOne" data-parent="#sidenavAccordionPages">
-                                    <nav class="sb-sidenav-menu-nested nav">
-                                        <a class="nav-link" href="401.html">401 Page</a>
-                                        <a class="nav-link" href="404.html">404 Page</a>
-                                        <a class="nav-link" href="500.html">500 Page</a>
                                     </nav>
                                 </div>
                             </nav>
