--- a/MvcTicariOtomasyon/MvcTicariOtomasyon/Views/Login/Index.cshtml
+++ b/MvcTicariOtomasyon/MvcTicariOtomasyon/Views/Login/Index.cshtml
@@ -42,13 +42,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <section class="register">
         <div class="header">
             <div class="logo">
-                <a href="#">Login Form</a>
+                <a href="#">GİRİŞ PANELİ</a>
             </div>
             <div class="social">
-                <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                <li><a href="#"><span class="fa fa-linkedin"></span></a></li>
-                <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
+                <li><a href="https://www.linkedin.com/in/bariskardas/" target="_blank"><span class="fa fa-linkedin"></span></a></li>
+                <li><a href="https://github.com/bariskardas" target="_blank"><span class="fa fa-github"></span></a></li>
+                <li><a href="mailto:bariskardas72@gmail.com" target="_blank"><span class="fa fa-google-plus"></span></a></li>
+                <li><a href="#"><span class="fa fa-facebook" target="_blank"></span></a></li>
             </div>
             <div class="clear"></div>
         </div>
