--- a/MvcTicariOtomasyon/MvcTicariOtomasyon/Views/Shared/AdminLayout.cshtml
+++ b/MvcTicariOtomasyon/MvcTicariOtomasyon/Views/Shared/AdminLayout.cshtml
@@ -17,7 +17,7 @@
 </head>
 <body>
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">Ticari Otomasyon</a><button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#">
+        <a class="navbar-brand" href="/Kategori/Index/">Ticari Otomasyon</a><button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#">
             <i class="fas fa-bars"></i>
         </button><!-- Navbar Search-->
         <form class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0">
@@ -35,7 +35,7 @@
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
                     <a class="dropdown-item" href="#">Ayarlar</a><a class="dropdown-item" href="#">Hesabım</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="login.html">Çıkış</a>
+                    <a class="dropdown-item" href="/Personel/LogOut/">Çıkış</a>
                 </div>
             </li>
         </ul>
@@ -106,6 +106,10 @@
                             <div class="sb-nav-link-icon"><i class="fas fa-calendar"></i></div>
                             Faturalar
                         </a>
+                        <a class="nav-link" href="/Fatura/Dinamik/">
+                            <div class="sb-nav-link-icon"><i class="fas fa-file-invoice"></i></div>
+                            Dinamik Faturalar
+                        </a>
                         <a class="nav-link" href="index.html">
                             <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                             Giderler
@@ -134,10 +138,14 @@
                             <div class="sb-nav-link-icon"><i class="fas fa-university"></i></div>
                             Ürün Detay
                         </a>
-                        <a class="nav-link" href="/istatistik/KolayTablolar">
-                            <div class="sb-nav-link-icon"><i class="fas fa-bookmark"></i></div>
-                            Hızlı Bakış
-                        </a>
+
+                        @if (User.IsInRole("A"))
+                        {
+                            <a class="nav-link" href="/istatistik/KolayTablolar">
+                                <div class="sb-nav-link-icon"><i class="fas fa-bookmark"></i></div>
+                                Hızlı Bakış
+                            </a>
+                        }
                     </div>
                 </div>
                 <div class="sb-sidenav-footer">
